k8s/virtual-service-updated.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-app
  namespace: canary
spec:
  hosts:
  - "*"
  gateways:
  - my-app-gateway
  http:
  - route:
    - destination:
        host: my-app-service
        subset: stable
      weight: 70
    - destination:
        host: my-app-service
        subset: canary
      weight: 20
    - destination:
        host: my-app-service
        subset: v2
      weight: 10
