k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demoapp-virtualservice
  namespace: canary
spec:
  gateways:
  - demoapp-gateway
  hosts:
  - 'canary.test.cloudtechner.com'
  http:
    route:
    - destination:
        host: demoapp.canary.svc.cluster.local
        port:
          number: 80
